src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_Error_NonDecimalDigit-StashIr.error
error: Expected ';', but instead got 'g2'.
--> main.hs:7:18
  | 
7 |         return -1g2;}}
  |                  ^^
